开始写新的综述文章

--- a/生物热仿真_5.md
+++ b/生物热仿真_5.md
@@ -7,7 +7,7 @@
 > 2. 设计多入针点的优化算法，思路来源于**覆盖问题**。
 
 
-# 稳态温度分布计算
+# 稳态温度分布的差分形式
 
 稳态温度分布计算的理论基础是热流的平衡，只有热流平衡才能达到稳态。
 $$
@@ -16,7 +16,10 @@ $$
 $$
 其中，$Q_{in}$为输入热量，$Q_{src}$为内部热源发热量，$Q_{out}$为输入热量，$U$为内能增量。
 
-![大](https://raw.githubusercontent.com/blueyo0/markdown_save/tree/master/figure/20200802/六面体微元法热平衡分析.JPG)
+**[to-do：推导三维不均匀$\alpha$下的稳态差分形式]**
 
+# 大型线性方程组的迭代求解
+
+根据上一部分推导的公式可知，稳态装
 
 
