添加自动化css

--- a/医学图像分割综述学习.md
+++ b/医学图像分割综述学习.md
@@ -1,7 +1,27 @@
-# Introduction
+<link rel="stylesheet" type="text/css" href="auto-number-title.css" />
+
+# 拥抱不完美的数据集 —— Voxel Cloud的医学图像分割综述
+## 前言
 本文为综述文章[^1]的笔记，主要跟随这篇综述全局性地了解一下Medical Image Segmentation里的各个方向。
 
-# Outline
+## 大纲
+![全文组织图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20200923/organization.JPG)
+
+医疗数据面临的一个重大问题就是，无论是数据还是标注的获取都需要很大代价。
+本文将这种限制分为两类：
+- 稀标注（scarce annotation）指仅有有限的带标注的数据
+- 弱标注（weak annotation）指只有稀疏、带噪、图像级的标注
+
+## 稀标注
+**缺少足够的训练数据**是医学图像分割网络的训练中**最常见**的问题，最传统的解决思路是数据增强、从自然图像迁移、权重正则化。但是这些方法都存在着自己的问题，以前两个为例：
+- **数据增强**：增强数据和原始数据存在很大相关性
+- **自然图像的迁移学习**：只能处理2D问题，对3D没有帮助
+
+### 数据增强
+数据增强可以很好的解决小样本数据集的过拟合问题，自然图像和医学图像都有许多数据增强的方法，此处仅介绍医学图像相关的。
+
+#### 传统方法
+
 
 
 
