--- a/医学图像分割综述学习.md
+++ b/医学图像分割综述学习.md
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="auto-number-title.css" />
+<link rel="stylesheet" type="text/css" href="appendix/autoIndex.css" />
 
 # 拥抱不完美的数据集 —— Voxel Cloud的医学图像分割综述
 ## 前言
@@ -21,10 +21,8 @@
 数据增强可以很好的解决小样本数据集的过拟合问题，自然图像和医学图像都有许多数据增强的方法，此处仅介绍医学图像相关的。
 
 #### 传统方法
+ 
 
 
+[^1]: N. Tajbakhsh, L. Jeyaseelan, Q. Li, J. N. Chiang, Z. Wu, and X. Ding, “Embracing imperfect datasets: A review of deep learning solutions for medical image segmentation,” Medical Image Analysis, vol. 63, p. 101693, 2020, doi: 10.1016/j.media.2020.101693.
 
-
-
-
-[^1]: Embracing Imperfect Datasets: A Review of Deep Learning Solutions for Medical Image Segmentation
