--- a/交互分割笔记_1.md
+++ b/交互分割笔记_1.md
@@ -10,9 +10,21 @@
 ## 重要术语
 ### 特征图(feature map)
 
-![全文组织图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/标准卷积过程.png)
+![标准卷积过程](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/标准卷积过程.png)
 
+一个标准的卷积过程如上，$3 \times 3$的输入
+和一个$2 \times 2$的卷积核进行卷积运算，
+最后得到的是$(3-2+1) \times (3-2+1) = 2 \times 2$的输出。
 
+将上一级输入进过一个卷积层处理完之后得到的输出，
+可以看做是上一级输入内容在空间维度上的某一级别的特征表示，所以被称为**特征图**。
+
+### 感受野(receptive field)
+
+**感受野**是指**特征图**上的一个点在输入空间上所受影响的区域，
+用人话说也就是**特征图上的点对应的原始数据上的空间大小**。
+
+以
 
 
 ## 卷积的不同参数的意义及效果
