--- a/交互分割笔记_1.md
+++ b/交互分割笔记_1.md
@@ -19,15 +19,39 @@
 将上一级输入进过一个卷积层处理完之后得到的输出，
 可以看做是上一级输入内容在空间维度上的某一级别的特征表示，所以被称为**特征图**。
 
+特征图大小的计算公式可简单总结为：
+
+$$
+N_{out} = N_{in} - kernal\_size + 1
+$$
+
+$N_{out}$，$N_{in}$分别为输出的特征图大小和上一层的特征图/输入数据大小。
+
 ### 感受野(receptive field)
 
 **感受野**是指**特征图**上的一个点在输入空间上所受影响的区域，
 用人话说也就是**特征图上的点对应的原始数据上的空间大小**。
 
-以
+以上图的标准卷积过程为例，
+输出的$19$是有输入的一个$2 \times 2$的区域计算而来的，
+也就是它能够**感受到这个区域的信息**。
+
+感受野大小的计算公式可简单总结为：
+$$
+R_{out} = R_{in} + kernal\_size - 1
+$$
+
+$R_{out}$，$R_{in}$分别为输入输出特征图的感受野，原始图像感受野为$1$。
+
+### 填充(padding)
+显而易见，卷积操作让图像缩水了一圈，影响了图像的分辨率。
+
+为了平衡这种影响，直接在图像周围填充一圈，就可以让图像的feature map尺寸维持不变
 
 
-## 卷积的不同参数的意义及效果
+
+
+## 卷积的不同参数的效果
 ### 卷积核大小
 比较常见的卷积核大小为$3 \times 3$、$5 \times 5$，
 理论上越大的卷积核提取的信息就越**全局**，学术点说就是**感受野随卷积核大小增大**。
