--- a/交互分割笔记_1.md
+++ b/交互分割笔记_1.md
@@ -46,10 +46,11 @@ $R_{out}$，$R_{in}$分别为输入输出特征图的感受野，原始图像感
 ### 填充(padding)
 显而易见，卷积操作让图像缩水了一圈，影响了图像的分辨率。
 
-为了平衡这种影响，直接在图像周围填充一圈，就可以让图像的feature map尺寸维持不变
+为了平衡这种影响，直接在图像周围填充一圈，就可以让图像的feature map尺寸维持不变。
 
+![padding示意图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/padding.png)
 
-
+如图所示，
 
 ## 卷积的不同参数的效果
 ### 卷积核大小
