--- a/交互分割笔记_1.md
+++ b/交互分割笔记_1.md
@@ -50,7 +50,19 @@ $R_{out}$，$R_{in}$分别为输入输出特征图的感受野，原始图像感
 
 ![padding示意图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/padding.png)
 
-如图所示，
+如图所示，padding操作影响了输出的大小，加入padding后的feature map size和 receptive field size计算公式如下：
+
+$$
+\begin{array}{l}
+N_{out} = N_{in} + padding\_sum - kernal\_size + 1  \\
+R_{out} = R_{in} + kernal\_size - 1
+\end{array}
+$$
+
+$padding\_sum$为两侧padding之和。
+
+### 步幅(stride)
+
 
 ## 卷积的不同参数的效果
 ### 卷积核大小
