--- a/交互分割笔记_1.md
+++ b/交互分割笔记_1.md
@@ -55,6 +55,7 @@ $R_{out}$，$R_{in}$分别为输入输出特征图的感受野，原始图像感
 $$
 \begin{array}{l}
 N_{out} = N_{in} + padding\_sum - kernal\_size + 1  \\
+\\
 R_{out} = R_{in} + kernal\_size - 1
 \end{array}
 $$
@@ -62,6 +63,33 @@ $$
 $padding\_sum$为两侧padding之和。
 
 ### 步幅(stride)
+![padding示意图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/stride.png)
+
+当输入图像过大的时候，卷积操作是很费时的，
+那么是否可以**跳着卷积**，就像**数据抽稀**一样呢？
+
+答案显然是肯定的，这同样也是卷积的基础操作之一，按照一定步幅(stride)进行跳步(stride)。
+
+如上图所示，对$3 \times 3$的图像进行$2 \times 2$的padding，得到$5 \times 5$的输入；
+如果按照传统卷积方式，$2 \times 2$的卷积核显而易见会输出$4 \times 4$的输出。
+
+此处执行跳步卷积，在$(0,0)$的横向下一个位置为$(0+2,0)$，竖向下一个位置为$(0+3,0)$
+步幅为$(2,3)$，当跳步后的位置不足以进行卷积运算时则跳转到下一行。
+
+考虑到stride后，公式更新为：
+$$
+\begin{array}{l}
+N_{out} = \frac{N_{in} + padding\_sum - kernal\_size}{stride} + 1  \\
+\\
+R_{out} = R_{in} + kernal\_size - 1
+\end{array}
+$$
+
+### 空洞卷积(Dilation Convolution)
+空洞卷积/带洞卷积/膨胀卷积，dilation convolution有很多翻译。这种形式的卷积核比传统的卷积核多**带**了一些**空洞**，因而尺寸就**膨胀**了。
+
+![dilation示意图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/dilation.webp)
+
 
 
 ## 卷积的不同参数的效果
