交互分割1写完了

--- a/交互分割笔记_1.md
+++ b/交互分割笔记_1.md
@@ -2,7 +2,7 @@
 
 # 交互分割实战知识笔记
 对于分割网络而言，CNN是十分核心的部分。
-由于以前都是比较零散地去了解一些CNN相关的东西以**使用**CNN网络，
+由于以前都是比较零散地去了解一些CNN相关的东西以使用CNN网络，
 对于CNN一些基础概念的理解非常浅薄。
 最近终于还是下了决心仔细地补一下基础，本文将首先针对CNN，
 进行一个知识点的记录。
@@ -63,7 +63,7 @@ $$
 $padding\_sum$为两侧padding之和。
 
 ### 步幅(stride)
-![padding示意图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/stride.png)
+![stride示意图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/stride.png)
 
 当输入图像过大的时候，卷积操作是很费时的，
 那么是否可以**跳着卷积**，就像**数据抽稀**一样呢？
@@ -85,23 +85,60 @@ R_{out} = R_{in} + kernal\_size - 1
 \end{array}
 $$
 
-### 空洞卷积(Dilation Convolution)
+### 空洞卷积(dilation convolution)
 空洞卷积/带洞卷积/膨胀卷积，dilation convolution有很多翻译。这种形式的卷积核比传统的卷积核多**带**了一些**空洞**，因而尺寸就**膨胀**了。
 
 ![dilation示意图](https://github.com/blueyo0/blueyo0.github.io/raw/master/figure/20201022/dilation.webp)
 
+相当于一种折中的增大卷积核的方法，卷积核变大了，但是中间很多地方是洞，所以计算量不怎么变。
+
+考虑到dilation后，
+使用$(kernal\_size-1) \times dilation + 1$ 
+替换原公式中的$kernal\_size$，
+公式更新为：
+$$
+\begin{array}{l}
+N_{out} = \frac{N_{in} + padding\_sum - (kernal\_size-1) \times dilation - 1}{stride} + 1  \\
+\\
+R_{out} = R_{in} + (kernal\_size-1) \times dilation
+\end{array}
+$$
 
 
 ## 卷积的不同参数的效果
-### 卷积核大小
+### kernal size
+
 比较常见的卷积核大小为$3 \times 3$、$5 \times 5$，
 理论上越大的卷积核提取的信息就越**全局**，学术点说就是**感受野随卷积核大小增大**。
 
+但是理论上两个$3 \times 3$卷积核的嵌套就可以替代一个$5 \times 5$的卷积核，
+但是计算量上，两个$3 \times 3$的卷积核为$2 \times 3^2 \times (image\_size-2)^2$级别，
+而一个$5 \times 5$的卷积核为$5^2 \times (image\_size-4)^2$级别。
 
+显而易见，计算量随卷积核的大小**指数级增长**，所以明显**使用多个小卷积核的卷积层是更经济的**。
 
+所以在一般问题中，我们都选用$3 \times 3$的卷积核。
 
+### stride
 
+从原理上说，stride代表对图像特征提取的精度，**stride越大则精度越低**。
 
+作用类似于pooling，可以模糊一些特征，从而降低过拟合。
 
+### dilation
 
+dilation来自于[^1]，由于之前的CNN通常使用conv + pooling的方式先提取并浓缩特征，
+然后再将特征upsampling回原始分辨率。
 
+pooling虽然增大了感受野，却丢失了信息；dilation方式可以扩大感受野，减少信息损失
+却又不增加计算量。
+
+不过显然，dilation也存在以下问题：
+- 损失了信息的连续性，会引起Gridding Effect
+- 长距离信息相关性不足
+
+据说这两篇文章[^2][^3]中着重提了这些问题。
+
+[^1]: F. Yu and V. Koltun, “Multi-Scale Context Aggregation by Dilated Convolutions,” arXiv:1511.07122 [cs], Apr. 2016, Accessed: Oct. 22, 2020. [Online]. Available: http://arxiv.org/abs/1511.07122.
+[^2]: P. Wang et al., “Understanding Convolution for Semantic Segmentation,” arXiv:1702.08502 [cs], May 2018, Accessed: Oct. 22, 2020. [Online]. Available: http://arxiv.org/abs/1702.08502.
+[^3]: L.-C. Chen, G. Papandreou, F. Schroff, and H. Adam, “Rethinking Atrous Convolution for Semantic Image Segmentation,” arXiv:1706.05587 [cs], Dec. 2017, Accessed: Oct. 22, 2020. [Online]. Available: http://arxiv.org/abs/1706.05587.
